--- a/cook-book/src/MainContainer.css
+++ b/cook-book/src/MainContainer.css
@@ -1,8 +1,30 @@
+html, body{
+  background-color: #C6AC8F;
+}
+
+
+.Main-Container{
+  flex: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(2, 2, 2);  margin: 0;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+background-color: #C6AC8F;
+}
+
 .Main-header {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    font-size: calc(10px + 2vmin);
-    color: rgb(2, 2, 2);
+    font-size: calc(5vw);
+    color: rgb(2, 2, 2);  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   }
+
+
