--- a/cook-book/src/ingredents.css
+++ b/cook-book/src/ingredents.css
@@ -4,5 +4,15 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    background-color: rgb(193, 192, 192);
+}
+
+
+.TitleRecipe{
+    font-size: calc(4px + 2vmin);
+}
+
+.recipeImg{
+    height: auto;
+    max-width: 100%;
+    border-radius: 10%;
 }
