--- a/cook-book/src/CookingTitles.css
+++ b/cook-book/src/CookingTitles.css
@@ -26,6 +26,16 @@
     justify-content: center;
     font-size: 2.2vw;
     background-color: rgb(193, 192, 192);
+    position: absolute;
+    opacity: 0;
+}
+.recipeTitle:hover
+{
+    position: absolute;
+    opacity: 1;
+    background-color: white;
+    /* background-color: transparent; */
+    color:black;
 }
 
 
