--- a/cook-book/src/CookingTitles.css
+++ b/cook-book/src/CookingTitles.css
@@ -27,14 +27,16 @@
     font-size: 2.2vw;
     background-color: rgb(193, 192, 192);
     position: absolute;
+
+    padding:60px;
     opacity: 0;
 }
 .recipeTitle:hover
 {
     position: absolute;
     opacity: 1;
-    background-color: white;
-    /* background-color: transparent; */
+    /* background-color: white; */
+    background-color: transparent;
     color:black;
 }
 
