--- a/cook-book/src/MainContainer.css
+++ b/cook-book/src/MainContainer.css
@@ -18,7 +18,7 @@ background-color: #C6AC8F;
 
 .Main-header {
     align-items: center;
-    font-size: calc(5vw);
+    font-size: calc(10px + 5vw);
     color: rgb(2, 2, 2);  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
