--- a/cook-book/src/CookingTitles.css
+++ b/cook-book/src/CookingTitles.css
@@ -7,42 +7,44 @@
 }
 
 
+
+
 .recipeItem{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    background-color: rgb(193, 192, 192);
     margin: 20px;
-    width: 27%;
+    width: 45%;
 
 
     border-radius: 10%;
 }
 
 .recipeTitle{
+    padding: 2%;
     align-items: center;
     justify-content: center;
-    font-size: 2vw;
-    background-color: rgb(193, 192, 192);
+    font-size: 1.5vw;
     position: absolute;
-    padding:60px;
-    opacity: 0;
+    background: rgba(0, 0, 0, .4);
+    height: auto;
+    max-width: 35%;
+    border-radius: 10%;
 }
 
-.recipeTitle:hover
-{
-    position: absolute;
-    opacity: 1;
-    /* background-color: white; */
-    background-color: transparent;
-    color:black;
+.btn-outline-secondary{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
 
 .recipeImg{
     height: auto;
+    width: 90%;
     max-width: 100%;
     border-radius: 10%;
 }
