--- a/cook-book/src/MainContainer.css
+++ b/cook-book/src/MainContainer.css
@@ -1,5 +1,6 @@
 html, body{
   background-color: #C6AC8F;
+  margin:2%;
 }
 
 
@@ -16,11 +17,27 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 background-color: #C6AC8F;
 }
 
-.Main-header {
+
+  .Main-header {
     align-items: center;
-    font-size: calc(10px + 5vw);
-    color: rgb(2, 2, 2);  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-size: calc(10px + 6vw);
+    color: rgb(2, 2, 2);  
+    margin: 0;
+    padding: 0;
+  font-family: 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  }
+
+  .second-header{
+    align-items: center;
+    font-size: calc(10px + 2vw);
+    color: rgb(2, 2, 2);  
+    margin: 0;
+    padding: 0;
+  font-family: 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
