--- a/cook-book/src/CookingTitles.css
+++ b/cook-book/src/CookingTitles.css
@@ -16,31 +16,46 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     margin: 20px;
-    width: 45%;
+    width: 27%;
 
 
     border-radius: 10%;
 }
 
 .recipeTitle{
-    padding: 2%;
+    padding: 1%;
     align-items: center;
     justify-content: center;
-    font-size: 1.5vw;
+    font-size: 1vw;
+    margin: 0;
+    color:white;
+    background-color: #6c757d;
     position: absolute;
-    background: rgba(0, 0, 0, .4);
     height: auto;
-    max-width: 35%;
-    border-radius: 10%;
+    max-width: 15%;
 }
 
 .btn-outline-secondary{
     width: 80%;
+    padding: 0;
+    margin: 0;
     display: flex;
     align-items: center;
     text-align: center;
+    outline:none;
+    border:none;
 }
 
+.viewIngredients{
+    align-items: center;
+    font-size: calc(10px + 1vmin);
+    color: rgb(2, 2, 2);  margin: 0;
+    font-family: 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
 .recipeImg{
     height: auto;
