--- a/cook-book/src/ingredents.css
+++ b/cook-book/src/ingredents.css
@@ -26,17 +26,6 @@
     align-items: left;
     justify-content: left;
 }
-/* .recipeImg:hover{
-    opacity: 0.9;
-} */
-
-/* .ImgOverlay{
-    position:absolute;
-    top:0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.6);
-    color:#fff;
-} */
 
 .list-group{
     background-color: #C6AC8F;
@@ -45,4 +34,22 @@
 background-color: #d6ba9b;
 font-size: calc(10px + 1vmin);
 text-align: left;
+}
+
+
+.form-check-input:focus {
+    border-color: #f5f5f5;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(154, 154, 154, 0.25);
+  }
+.form-check-input:checked{
+    background-color: #C6AC8F;
+  border-color: black;
+  }
+
+#btn-outline-secondary-link{
+    width: 30%;
+    padding: 0;
+    margin: 1%;
+    text-align: center;
 }
