--- a/cook-book/src/CookingTitles.css
+++ b/cook-book/src/CookingTitles.css
@@ -22,6 +22,20 @@
     border-radius: 10%;
 }
 
+@media (max-width:400px){
+    .recipeItem{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: calc(10px + 2vmin);
+        margin: 5px;
+        padding:0px;
+        width: 100%;
+        border-radius: 10%;
+    }
+}
+
 .recipeTitle{
     padding: 1%;
     align-items: center;
