--- a/cook-book/src/MainContainer.css
+++ b/cook-book/src/MainContainer.css
@@ -1,5 +1,5 @@
 html, body{
-  background-color: #C6AC8F;
+  background-color: #000000;
   margin:3%;
 }
 
@@ -13,14 +13,15 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   sans-serif;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
-background-color: #C6AC8F;
+background-color: #000000;
 }
 
 
   .Main-header {
     align-items: center;
     font-size: calc(10px + 6vw);
-    color: rgb(2, 2, 2);  
+    background-color: black;  
+    color:white;
     margin: 0;
     padding: 0;
   font-family: 'Oxygen',
@@ -33,7 +34,8 @@ background-color: #C6AC8F;
   .second-header{
     align-items: center;
     font-size: calc(10px + 2vw);
-    color: rgb(2, 2, 2);  
+    background-color: black;  
+    color:white; 
     margin: 0;
     padding: 0;
   font-family: 'Oxygen',
@@ -45,7 +47,8 @@ background-color: #C6AC8F;
   .third-header{
     align-items: center;
     font-size: calc(10px + 1vw);
-    color: rgb(2, 2, 2);  
+    background-color: black;  
+    color:white;  
     margin: 0;
     padding: 0;
   font-family: 'Oxygen',
