--- a/cook-book/src/ingredents.css
+++ b/cook-book/src/ingredents.css
@@ -9,6 +9,7 @@
 
 .TitleRecipe{
     font-size: calc(10px + 2.5vmin);
+    color:white
 }
 
 .ingredientsRecipeImg{
@@ -20,6 +21,10 @@
 
 .subHeader{
     font-size: calc(10px + 2.5vmin);
+    color:white
+}
+.buttonText{
+    font-size: calc(10px + 2.5vmin);
 }
 
 .backButton{
@@ -28,10 +33,11 @@
 }
 
 .list-group{
-    background-color: #C6AC8F;
+    background-color: #3D3D3D;
 }
 .list-group-item{
-background-color: #d6ba9b;
+background-color: #3D3D3D;
+color: white;
 font-size: calc(10px + 1vmin);
 text-align: left;
 }
@@ -43,7 +49,7 @@ text-align: left;
     box-shadow: 0 0 0 0.25rem rgba(154, 154, 154, 0.25);
   }
 .form-check-input:checked{
-    background-color: #C6AC8F;
+    background-color: #3D3D3D;;
   border-color: black;
   }
 
